--- a/maps/cities.html
+++ b/maps/cities.html
@@ -19987,6 +19987,12 @@
     "model_id": "47800c0774de447d9521b9244ee05b5d"
 }
 </script>
+    
+<style type="text/css">
+    .jupyter-widgets.leaflet-widgets {
+        height: auto !important;
+    }
+</style>
 
 </body>
 </html>
