--- a/maps/hospitals.html
+++ b/maps/hospitals.html
@@ -5397,6 +5397,12 @@
     "version_minor": 0
 }
 </script>
+    
+<style type="text/css">
+    .jupyter-widgets.leaflet-widgets {
+        height: auto !important;
+    }
+</style>
 
 </body>
 </html>
