--- a/maps/cities.html
+++ b/maps/cities.html
@@ -19695,8 +19695,8 @@
                 "_model_module_version": "^0.12.3",
                 "_view_module_version": "^0.12.3",
                 "center": [
-                    41.6086,
-                    21.7453
+                    41.60722821271717,
+                    21.7474365234375
                 ],
                 "controls": [
                     "IPY_MODEL_dbf02d2e686f424f8372d265aa03ca06",
@@ -19704,7 +19704,7 @@
                 ],
                 "default_style": "IPY_MODEL_688cff40e7e74abaa42fb4450d80976d",
                 "dragging_style": "IPY_MODEL_963e1faa28cb40619ee47f0f5d1db23e",
-                "east": 23.9007568359375,
+                "east": -180,
                 "fullscreen": false,
                 "interpolation": "bilinear",
                 "layers": [
@@ -19713,7 +19713,7 @@
                 ],
                 "layout": "IPY_MODEL_86b367b981b64b7d89ce384b140a725d",
                 "modisdate": "yesterday",
-                "north": 42.42345651793833,
+                "north": -90,
                 "options": [
                     "bounce_at_zoom_limits",
                     "box_zoom",
@@ -19740,9 +19740,9 @@
                     "zoom_animation_threshold",
                     "zoom_start"
                 ],
-                "south": 40.78054143186033,
-                "style": "IPY_MODEL_d56b5fdf29854a3088871b458ebbb0c0",
-                "west": 19.594116210937504,
+                "south": 90,
+                "style": "IPY_MODEL_688cff40e7e74abaa42fb4450d80976d",
+                "west": 180,
                 "zoom": 8
             }
         },
@@ -19973,6 +19973,350 @@
                     "IPY_MODEL_788dc4480f4848a09a0fdabc586b4f96"
                 ]
             }
+        },
+        "6beabe60328746a1aad6b642a8575fb0": {
+            "model_name": "LeafletTileLayerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "max_native_zoom": 18,
+                "max_zoom": 19,
+                "min_native_zoom": 0,
+                "min_zoom": 1,
+                "name": "OpenStreetMap.Mapnik",
+                "no_wrap": false,
+                "options": [
+                    "attribution",
+                    "detect_retina",
+                    "max_native_zoom",
+                    "max_zoom",
+                    "min_native_zoom",
+                    "min_zoom",
+                    "no_wrap",
+                    "tile_size",
+                    "tms"
+                ]
+            }
+        },
+        "293bd213c9a04bbeb2e9c0061c83b36f": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3"
+            }
+        },
+        "332868120a4449e982de1d784ccaa815": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "cursor": "move"
+            }
+        },
+        "3806a0d5d1f54e99866876f398ba4a2c": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "3061b428395340e98bb11e2e2de79c22": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3"
+            }
+        },
+        "7caab55431e249f2be42d6d203816f1a": {
+            "model_name": "LeafletMapModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "center": [
+                    41.6086,
+                    21.7453
+                ],
+                "controls": [
+                    "IPY_MODEL_7b80cb25bb9b40fa8e9a65b8995e4a91",
+                    "IPY_MODEL_133b9950d63b4c09a4250b9207f2f20c"
+                ],
+                "default_style": "IPY_MODEL_293bd213c9a04bbeb2e9c0061c83b36f",
+                "dragging_style": "IPY_MODEL_332868120a4449e982de1d784ccaa815",
+                "east": 22.821350097656254,
+                "fullscreen": false,
+                "interpolation": "bilinear",
+                "layers": [
+                    "IPY_MODEL_6beabe60328746a1aad6b642a8575fb0",
+                    "IPY_MODEL_4f69d5c7dff541c7af7e81ad86fb210d"
+                ],
+                "layout": "IPY_MODEL_3806a0d5d1f54e99866876f398ba4a2c",
+                "modisdate": "yesterday",
+                "north": 42.01869237684385,
+                "options": [
+                    "bounce_at_zoom_limits",
+                    "box_zoom",
+                    "center",
+                    "close_popup_on_click",
+                    "double_click_zoom",
+                    "dragging",
+                    "fullscreen",
+                    "inertia",
+                    "inertia_deceleration",
+                    "inertia_max_speed",
+                    "interpolation",
+                    "keyboard",
+                    "keyboard_pan_offset",
+                    "keyboard_zoom_offset",
+                    "max_zoom",
+                    "min_zoom",
+                    "scroll_wheel_zoom",
+                    "tap",
+                    "tap_tolerance",
+                    "touch_zoom",
+                    "world_copy_jump",
+                    "zoom",
+                    "zoom_animation_threshold",
+                    "zoom_start"
+                ],
+                "south": 41.19725651800892,
+                "style": "IPY_MODEL_3061b428395340e98bb11e2e2de79c22",
+                "west": 20.668029785156254,
+                "zoom": 9
+            }
+        },
+        "7b80cb25bb9b40fa8e9a65b8995e4a91": {
+            "model_name": "LeafletZoomControlModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "options": [
+                    "position",
+                    "zoom_in_text",
+                    "zoom_in_title",
+                    "zoom_out_text",
+                    "zoom_out_title"
+                ]
+            }
+        },
+        "133b9950d63b4c09a4250b9207f2f20c": {
+            "model_name": "LeafletAttributionControlModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "options": [
+                    "position",
+                    "prefix"
+                ],
+                "position": "bottomright",
+                "prefix": "Leaflet"
+            }
+        },
+        "05e7d24f5a844203a766d8d097adfe4e": {
+            "model_name": "LeafletCircleMarkerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "color": "red",
+                "location": [
+                    41.5244,
+                    20.5242
+                ],
+                "options": [
+                    "class_name",
+                    "color",
+                    "dash_array",
+                    "fill",
+                    "fill_color",
+                    "fill_opacity",
+                    "line_cap",
+                    "line_join",
+                    "opacity",
+                    "pointer_events",
+                    "radius",
+                    "stroke",
+                    "weight"
+                ],
+                "popup": "IPY_MODEL_7d1b523ba5a34d10932fee4fc920ca28",
+                "radius": 20,
+                "weight": 3
+            }
+        },
+        "d1e7a39694214663ab0ae3e6e75570b1": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "fdcacaf0f6454440b43dcc46dbfcd543": {
+            "model_name": "DescriptionStyleModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "description_width": ""
+            }
+        },
+        "f0e8f03bd2554223badd8e46ff6f4451": {
+            "model_name": "HTMLModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "layout": "IPY_MODEL_d1e7a39694214663ab0ae3e6e75570b1",
+                "style": "IPY_MODEL_fdcacaf0f6454440b43dcc46dbfcd543",
+                "value": "\n        <!DOCTYPE html>\n        <html>\n        <head>\n        <style>\n        table {\n          font-family: arial, sans-serif;\n          border-collapse: collapse;\n          width: 100%;\n        }\n\n        td, th {\n          border: 1px solid #999999;\n          text-align: left;\n          padding: 2px;\n        }\n\n        tr:nth-child(even) {\n          background-color: #eeeeee;\n        }\n        </style>\n        </head>\n        <body>\n\n        <h4>Дебар</h4>\n\n        <table>\n    \n            <tr>\n                <td>Заразени</td>\n                <td>16</td>\n            </tr>\n        \n            <tr>\n                <td>Излечени</td>\n                <td>0.0</td>\n            </tr>\n        \n            <tr>\n                <td>Мртви</td>\n                <td>0.0</td>\n            </tr>\n        \n            <tr>\n                <td>Население</td>\n                <td>nan</td>\n            </tr>\n        \n    </table>\n\n    </body>\n    </html>\n    "
+            }
+        },
+        "7d1b523ba5a34d10932fee4fc920ca28": {
+            "model_name": "LeafletPopupModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "auto_close": false,
+                "auto_pan": true,
+                "auto_pan_padding": [
+                    5,
+                    5
+                ],
+                "auto_pan_padding_bottom_right": [],
+                "auto_pan_padding_top_left": [],
+                "child": "IPY_MODEL_f0e8f03bd2554223badd8e46ff6f4451",
+                "class_name": "",
+                "close_button": true,
+                "close_on_escape_key": false,
+                "keep_in_view": false,
+                "options": [
+                    "auto_close",
+                    "auto_pan",
+                    "auto_pan_padding",
+                    "auto_pan_padding_bottom_right",
+                    "auto_pan_padding_top_left",
+                    "class_name",
+                    "close_button",
+                    "close_on_escape_key",
+                    "keep_in_view",
+                    "max_height",
+                    "max_width",
+                    "min_width"
+                ]
+            }
+        },
+        "f520d8815c9c4c24878aaed4004aa123": {
+            "model_name": "LeafletCircleMarkerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "color": "red",
+                "location": [
+                    42,
+                    21.4335
+                ],
+                "options": [
+                    "class_name",
+                    "color",
+                    "dash_array",
+                    "fill",
+                    "fill_color",
+                    "fill_opacity",
+                    "line_cap",
+                    "line_join",
+                    "opacity",
+                    "pointer_events",
+                    "radius",
+                    "stroke",
+                    "weight"
+                ],
+                "popup": "IPY_MODEL_faded4ca4c5544c0bee7280e0bafa26d",
+                "radius": 7,
+                "weight": 3
+            }
+        },
+        "b2fa5c544e2d453480b81bb2742927eb": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "1d9acd9b6e0e4f64959429d4e9a64c18": {
+            "model_name": "DescriptionStyleModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "description_width": ""
+            }
+        },
+        "30a23c7b34d9476ca9936a47852bebb5": {
+            "model_name": "HTMLModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "layout": "IPY_MODEL_b2fa5c544e2d453480b81bb2742927eb",
+                "style": "IPY_MODEL_1d9acd9b6e0e4f64959429d4e9a64c18",
+                "value": "\n        <!DOCTYPE html>\n        <html>\n        <head>\n        <style>\n        table {\n          font-family: arial, sans-serif;\n          border-collapse: collapse;\n          width: 100%;\n        }\n\n        td, th {\n          border: 1px solid #999999;\n          text-align: left;\n          padding: 2px;\n        }\n\n        tr:nth-child(even) {\n          background-color: #eeeeee;\n        }\n        </style>\n        </head>\n        <body>\n\n        <h4>Скопје</h4>\n\n        <table>\n    \n            <tr>\n                <td>Заразени</td>\n                <td>3</td>\n            </tr>\n        \n            <tr>\n                <td>Излечени</td>\n                <td>0.0</td>\n            </tr>\n        \n            <tr>\n                <td>Мртви</td>\n                <td>0.0</td>\n            </tr>\n        \n            <tr>\n                <td>Население</td>\n                <td>494087.0</td>\n            </tr>\n        \n    </table>\n\n    </body>\n    </html>\n    "
+            }
+        },
+        "faded4ca4c5544c0bee7280e0bafa26d": {
+            "model_name": "LeafletPopupModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "auto_close": false,
+                "auto_pan": true,
+                "auto_pan_padding": [
+                    5,
+                    5
+                ],
+                "auto_pan_padding_bottom_right": [],
+                "auto_pan_padding_top_left": [],
+                "child": "IPY_MODEL_30a23c7b34d9476ca9936a47852bebb5",
+                "class_name": "",
+                "close_button": true,
+                "close_on_escape_key": false,
+                "keep_in_view": false,
+                "options": [
+                    "auto_close",
+                    "auto_pan",
+                    "auto_pan_padding",
+                    "auto_pan_padding_bottom_right",
+                    "auto_pan_padding_top_left",
+                    "class_name",
+                    "close_button",
+                    "close_on_escape_key",
+                    "keep_in_view",
+                    "max_height",
+                    "max_width",
+                    "min_width"
+                ]
+            }
+        },
+        "4f69d5c7dff541c7af7e81ad86fb210d": {
+            "model_name": "LeafletMarkerClusterModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "markers": [
+                    "IPY_MODEL_05e7d24f5a844203a766d8d097adfe4e",
+                    "IPY_MODEL_f520d8815c9c4c24878aaed4004aa123"
+                ]
+            }
         }
     }
 }
@@ -19984,10 +20328,10 @@
 {
     "version_major": 2,
     "version_minor": 0,
-    "model_id": "47800c0774de447d9521b9244ee05b5d"
+    "model_id": "7caab55431e249f2be42d6d203816f1a"
 }
 </script>
-    
+
 <style type="text/css">
     .jupyter-widgets.leaflet-widgets {
         height: auto !important;
