--- a/maps/hospitals.html
+++ b/maps/hospitals.html
@@ -4878,8 +4878,8 @@
                 "_model_module_version": "^0.12.3",
                 "_view_module_version": "^0.12.3",
                 "center": [
-                    41.6086,
-                    21.7453
+                    41.60722821271717,
+                    21.7474365234375
                 ],
                 "controls": [
                     "IPY_MODEL_dde8c513f6984dfb954e4d3bca8bad1c",
@@ -4887,7 +4887,7 @@
                 ],
                 "default_style": "IPY_MODEL_86af45b749ba4f19a18c4a9f4e57f7cc",
                 "dragging_style": "IPY_MODEL_fd112a50e85f45419a5f257a2b5199a3",
-                "east": 23.9007568359375,
+                "east": -180,
                 "fullscreen": false,
                 "interpolation": "bilinear",
                 "layers": [
@@ -4896,7 +4896,7 @@
                 ],
                 "layout": "IPY_MODEL_b19e80267cdd4764afed790680e31b58",
                 "modisdate": "yesterday",
-                "north": 42.42345651793833,
+                "north": -90,
                 "options": [
                     "bounce_at_zoom_limits",
                     "box_zoom",
@@ -4923,9 +4923,9 @@
                     "zoom_animation_threshold",
                     "zoom_start"
                 ],
-                "south": 40.78054143186033,
-                "style": "IPY_MODEL_fda2a82c4c7240cd8b973cca0c6bae58",
-                "west": 19.594116210937504,
+                "south": 90,
+                "style": "IPY_MODEL_86af45b749ba4f19a18c4a9f4e57f7cc",
+                "west": 180,
                 "zoom": 8
             }
         },
@@ -5383,6 +5383,406 @@
             "state": {
                 "_model_module_version": "^0.12.3"
             }
+        },
+        "c0b0fe89884141f896200f5cce94b8be": {
+            "model_name": "LeafletTileLayerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "max_native_zoom": 18,
+                "max_zoom": 19,
+                "min_native_zoom": 0,
+                "min_zoom": 1,
+                "name": "OpenStreetMap.Mapnik",
+                "no_wrap": false,
+                "options": [
+                    "attribution",
+                    "detect_retina",
+                    "max_native_zoom",
+                    "max_zoom",
+                    "min_native_zoom",
+                    "min_zoom",
+                    "no_wrap",
+                    "tile_size",
+                    "tms"
+                ]
+            }
+        },
+        "6cd6d4bba237491ca4f2f23015bf6a0d": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3"
+            }
+        },
+        "3103b45282384b2e861081a243bc593a": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "cursor": "move"
+            }
+        },
+        "d59f4033cb694617b3252d2d4dd7ed57": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "7f9549347770411b97f747264d7c38ff": {
+            "model_name": "LeafletMapStyleModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3"
+            }
+        },
+        "6f3b96b64660491fa6ecd5b05530c161": {
+            "model_name": "LeafletMapModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "center": [
+                    41.6086,
+                    21.7453
+                ],
+                "controls": [
+                    "IPY_MODEL_d3f32d86c79840c98855355da45074e0",
+                    "IPY_MODEL_e59ef1e99dfc47b5af971167923265a1"
+                ],
+                "default_style": "IPY_MODEL_6cd6d4bba237491ca4f2f23015bf6a0d",
+                "dragging_style": "IPY_MODEL_3103b45282384b2e861081a243bc593a",
+                "east": 22.821350097656254,
+                "fullscreen": false,
+                "interpolation": "bilinear",
+                "layers": [
+                    "IPY_MODEL_c0b0fe89884141f896200f5cce94b8be",
+                    "IPY_MODEL_4a1fd2b61d194be78a05e1d869d6e86c"
+                ],
+                "layout": "IPY_MODEL_d59f4033cb694617b3252d2d4dd7ed57",
+                "modisdate": "yesterday",
+                "north": 42.01869237684385,
+                "options": [
+                    "bounce_at_zoom_limits",
+                    "box_zoom",
+                    "center",
+                    "close_popup_on_click",
+                    "double_click_zoom",
+                    "dragging",
+                    "fullscreen",
+                    "inertia",
+                    "inertia_deceleration",
+                    "inertia_max_speed",
+                    "interpolation",
+                    "keyboard",
+                    "keyboard_pan_offset",
+                    "keyboard_zoom_offset",
+                    "max_zoom",
+                    "min_zoom",
+                    "scroll_wheel_zoom",
+                    "tap",
+                    "tap_tolerance",
+                    "touch_zoom",
+                    "world_copy_jump",
+                    "zoom",
+                    "zoom_animation_threshold",
+                    "zoom_start"
+                ],
+                "south": 41.19725651800892,
+                "style": "IPY_MODEL_7f9549347770411b97f747264d7c38ff",
+                "west": 20.668029785156254,
+                "zoom": 9
+            }
+        },
+        "d3f32d86c79840c98855355da45074e0": {
+            "model_name": "LeafletZoomControlModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "options": [
+                    "position",
+                    "zoom_in_text",
+                    "zoom_in_title",
+                    "zoom_out_text",
+                    "zoom_out_title"
+                ]
+            }
+        },
+        "e59ef1e99dfc47b5af971167923265a1": {
+            "model_name": "LeafletAttributionControlModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "options": [
+                    "position",
+                    "prefix"
+                ],
+                "position": "bottomright",
+                "prefix": "Leaflet"
+            }
+        },
+        "5b4a54c296384a9fb0cad29771e73c3a": {
+            "model_name": "LeafletIconModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "icon_anchor": [
+                    18.50219859070546,
+                    18.50219859070546
+                ],
+                "icon_size": [
+                    37.00439718141092,
+                    37.00439718141092
+                ],
+                "icon_url": "https://www.freeiconspng.com/uploads/ambulance-cross-hospital-icon-11.png",
+                "options": [
+                    "icon_anchor",
+                    "icon_size",
+                    "icon_url",
+                    "popup_anchor",
+                    "shadow_anchor",
+                    "shadow_size",
+                    "shadow_url"
+                ],
+                "popup_anchor": [
+                    0,
+                    -18.50219859070546
+                ],
+                "shadow_url": null
+            }
+        },
+        "0b6d8e1a8a1f43a9b50e8e2646d43c8f": {
+            "model_name": "LeafletMarkerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "draggable": false,
+                "icon": "IPY_MODEL_5b4a54c296384a9fb0cad29771e73c3a",
+                "location": [
+                    41.988005,
+                    21.425646
+                ],
+                "options": [
+                    "alt",
+                    "draggable",
+                    "keyboard",
+                    "rise_offset",
+                    "rise_on_hover",
+                    "rotation_angle",
+                    "rotation_origin",
+                    "title",
+                    "z_index_offset"
+                ],
+                "popup": "IPY_MODEL_2ebd6e430c534acb8cde471cfff3b2c5",
+                "z_index_offset": 1000
+            }
+        },
+        "d831e35283a548919f2376e488bb3803": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "a5ad57e816114bd2892e5306371da6db": {
+            "model_name": "DescriptionStyleModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "description_width": ""
+            }
+        },
+        "63d48ee07c8a46929a76eac0efc45675": {
+            "model_name": "HTMLModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "layout": "IPY_MODEL_d831e35283a548919f2376e488bb3803",
+                "style": "IPY_MODEL_a5ad57e816114bd2892e5306371da6db",
+                "value": "\n        <!DOCTYPE html>\n        <html>\n        <head>\n        <style>\n        table {\n          font-family: arial, sans-serif;\n          border-collapse: collapse;\n          width: 100%;\n        }\n\n        td, th {\n          border: 1px solid #999999;\n          text-align: left;\n          padding: 2px;\n        }\n\n        tr:nth-child(even) {\n          background-color: #eeeeee;\n        }\n        </style>\n        </head>\n        <body>\n\n        <h4>Клиника за инфективни болести Скопје</h4>\n\n        <table>\n    \n            <tr>\n                <td>Заразени</td>\n                <td>14</td>\n            </tr>\n        \n            <tr>\n                <td>Излечени</td>\n                <td>1.0</td>\n            </tr>\n        \n            <tr>\n                <td>Мртви</td>\n                <td>0.0</td>\n            </tr>\n        \n    </table>\n\n    </body>\n    </html>\n    "
+            }
+        },
+        "2ebd6e430c534acb8cde471cfff3b2c5": {
+            "model_name": "LeafletPopupModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "auto_close": false,
+                "auto_pan": true,
+                "auto_pan_padding": [
+                    5,
+                    5
+                ],
+                "auto_pan_padding_bottom_right": [],
+                "auto_pan_padding_top_left": [],
+                "child": "IPY_MODEL_63d48ee07c8a46929a76eac0efc45675",
+                "class_name": "",
+                "close_button": true,
+                "close_on_escape_key": false,
+                "keep_in_view": false,
+                "options": [
+                    "auto_close",
+                    "auto_pan",
+                    "auto_pan_padding",
+                    "auto_pan_padding_bottom_right",
+                    "auto_pan_padding_top_left",
+                    "class_name",
+                    "close_button",
+                    "close_on_escape_key",
+                    "keep_in_view",
+                    "max_height",
+                    "max_width",
+                    "min_width"
+                ]
+            }
+        },
+        "1b4160ec47aa4ff981db1452e030c815": {
+            "model_name": "LeafletIconModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "icon_anchor": [
+                    11.60964047443681,
+                    11.60964047443681
+                ],
+                "icon_size": [
+                    23.21928094887362,
+                    23.21928094887362
+                ],
+                "icon_url": "https://www.freeiconspng.com/uploads/ambulance-cross-hospital-icon-11.png",
+                "options": [
+                    "icon_anchor",
+                    "icon_size",
+                    "icon_url",
+                    "popup_anchor",
+                    "shadow_anchor",
+                    "shadow_size",
+                    "shadow_url"
+                ],
+                "popup_anchor": [
+                    0,
+                    -11.60964047443681
+                ],
+                "shadow_url": null
+            }
+        },
+        "9f247a8d777b4d809bcf2036fbd88c94": {
+            "model_name": "LeafletMarkerModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "draggable": false,
+                "icon": "IPY_MODEL_1b4160ec47aa4ff981db1452e030c815",
+                "location": [
+                    41.523717,
+                    20.523101
+                ],
+                "options": [
+                    "alt",
+                    "draggable",
+                    "keyboard",
+                    "rise_offset",
+                    "rise_on_hover",
+                    "rotation_angle",
+                    "rotation_origin",
+                    "title",
+                    "z_index_offset"
+                ],
+                "popup": "IPY_MODEL_e6f72824146c41a09bac29075cbc92f2",
+                "z_index_offset": 1000
+            }
+        },
+        "37dea1c2f41f4c9db5b2aecf61f435c0": {
+            "model_name": "LayoutModel",
+            "model_module": "@jupyter-widgets/base",
+            "model_module_version": "1.2.0",
+            "state": {}
+        },
+        "4fc9c6ff395d46ef946d058a043cbc3f": {
+            "model_name": "DescriptionStyleModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "description_width": ""
+            }
+        },
+        "5cec4a624a88490a9d48be73d4819e36": {
+            "model_name": "HTMLModel",
+            "model_module": "@jupyter-widgets/controls",
+            "model_module_version": "1.5.0",
+            "state": {
+                "layout": "IPY_MODEL_37dea1c2f41f4c9db5b2aecf61f435c0",
+                "style": "IPY_MODEL_4fc9c6ff395d46ef946d058a043cbc3f",
+                "value": "\n        <!DOCTYPE html>\n        <html>\n        <head>\n        <style>\n        table {\n          font-family: arial, sans-serif;\n          border-collapse: collapse;\n          width: 100%;\n        }\n\n        td, th {\n          border: 1px solid #999999;\n          text-align: left;\n          padding: 2px;\n        }\n\n        tr:nth-child(even) {\n          background-color: #eeeeee;\n        }\n        </style>\n        </head>\n        <body>\n\n        <h4>Општа болница Дебар</h4>\n\n        <table>\n    \n            <tr>\n                <td>Заразени</td>\n                <td>5</td>\n            </tr>\n        \n            <tr>\n                <td>Излечени</td>\n                <td>0.0</td>\n            </tr>\n        \n            <tr>\n                <td>Мртви</td>\n                <td>0.0</td>\n            </tr>\n        \n    </table>\n\n    </body>\n    </html>\n    "
+            }
+        },
+        "e6f72824146c41a09bac29075cbc92f2": {
+            "model_name": "LeafletPopupModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "auto_close": false,
+                "auto_pan": true,
+                "auto_pan_padding": [
+                    5,
+                    5
+                ],
+                "auto_pan_padding_bottom_right": [],
+                "auto_pan_padding_top_left": [],
+                "child": "IPY_MODEL_5cec4a624a88490a9d48be73d4819e36",
+                "class_name": "",
+                "close_button": true,
+                "close_on_escape_key": false,
+                "keep_in_view": false,
+                "options": [
+                    "auto_close",
+                    "auto_pan",
+                    "auto_pan_padding",
+                    "auto_pan_padding_bottom_right",
+                    "auto_pan_padding_top_left",
+                    "class_name",
+                    "close_button",
+                    "close_on_escape_key",
+                    "keep_in_view",
+                    "max_height",
+                    "max_width",
+                    "min_width"
+                ]
+            }
+        },
+        "4a1fd2b61d194be78a05e1d869d6e86c": {
+            "model_name": "LeafletMarkerClusterModel",
+            "model_module": "jupyter-leaflet",
+            "model_module_version": "^0.12.3",
+            "state": {
+                "_model_module_version": "^0.12.3",
+                "_view_module_version": "^0.12.3",
+                "markers": [
+                    "IPY_MODEL_0b6d8e1a8a1f43a9b50e8e2646d43c8f",
+                    "IPY_MODEL_9f247a8d777b4d809bcf2036fbd88c94"
+                ]
+            }
         }
     }
 }
@@ -5392,12 +5792,12 @@
 
 <script type="application/vnd.jupyter.widget-view+json">
 {
-    "model_id": "618c5ba5ef144354befde95c983cc086",
     "version_major": 2,
-    "version_minor": 0
+    "version_minor": 0,
+    "model_id": "6f3b96b64660491fa6ecd5b05530c161"
 }
 </script>
-    
+
 <style type="text/css">
     .jupyter-widgets.leaflet-widgets {
         height: auto !important;
