--- a/maps/cities.html
+++ b/maps/cities.html
@@ -9,7 +9,7 @@
           crossorigin=""/>
 
     <style type="text/css">
-        #mapid { height: 600px; }
+        #mapid { height: auto!; }
 
         .info {
             padding: 6px 8px;
