--- a/maps/cities.html
+++ b/maps/cities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: auto !important;">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
@@ -9,7 +9,7 @@
           crossorigin=""/>
 
     <style type="text/css">
-        #mapid { height: auto!; }
+        #mapid { height: 100% !important; }
 
         .info {
             padding: 6px 8px;
@@ -39,7 +39,7 @@
 
 
     <title>map</title>
-<body>
+<body style="height: auto !important; margin: 0 !important;">
 
     <div id="mapid"></div>
 
