--- a/maps/cities.html
+++ b/maps/cities.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: auto !important;">
+<html style="height: 100% !important;">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
@@ -39,7 +39,7 @@
 
 
     <title>map</title>
-<body style="height: auto !important; margin: 0 !important;">
+<body style="height: 100% !important; margin: 0 !important;">
 
     <div id="mapid"></div>
 
